--- a/style.css
+++ b/style.css
@@ -11,11 +11,13 @@ body {
 
 .box {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
+    flex-direction: column;
     width: 70vh;
     height: 70vh;
     margin-top: 10%;
     margin-left: 35%;
+    padding-top: 5%;
     border: 2px solid black;
     border-radius: 2vh;
     background-color:  #c6dff3 ;
@@ -23,18 +25,21 @@ body {
 
 .box2 {
     display: flex;
-    align-items: center;
+    align-items: flex-start;
+    flex-direction: column;
     width: 70vh;
     height: 90vh;
     margin-top: 2%;
     margin-left: 35%;
+    padding-top: 5%;
     border: 2px solid black;
     border-radius: 2vh;
     background-color:  #c6dff3 ;
 }
 
+
 h1 {
-    padding-left: 10%;
+    padding-left: 1%;
     padding-bottom: 10%;
     margin-left: 10%;
     padding-top: 0%;
@@ -42,10 +47,9 @@ h1 {
 
 .group {
     display: flex;
-    align-items: flex-start;
     flex-direction: column;
-    padding-left: 20%;
-    padding-bottom: 8%;
+    padding-left: 10%;
+    padding-bottom: 5%;
 }
 
 .lbl {
@@ -57,15 +61,7 @@ h1 {
 .input {
     padding: 5%;
     border-radius: 1vh;
-    padding-right: 70%;
-}
-
-.group2 {
-    display: inline-block;
-    justify-content: flex-start;
-    flex-direction: row;
-    padding-left: 20%;
-    padding-bottom: 15%;
+    padding-right: 50%;
 }
 
 .btn {
