--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 
 body {
 	font-family: 'Poppins', sans-serif;
-    margin: 10%;
+    margin: 5%;
 }
 
 .box {
@@ -37,10 +37,23 @@ body {
     background-color:  #c6dff3 ;
 }
 
+.smallBox {
+    display: flex;
+    align-items: flex-start;
+    flex-direction: column;
+    width: 7vh;
+    height: 9vh;
+    margin-top: 2%;
+    margin-left: 10%;
+    padding-top: 5%;
+    border: 2px solid rgb(243, 241, 241);
+    border-radius: 2vh;
+    background-color:  #0a0a0a ;
+}
 
 h1 {
     padding-left: 1%;
-    padding-bottom: 10%;
+    padding-bottom: 2%;
     margin-left: 10%;
     padding-top: 0%;
 }
