--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body {
     display: flex;
     align-items: flex-start;
     flex-direction: column;
-    width: 7vh;
+    width: 55vh;
     height: 9vh;
     margin-top: 2%;
     margin-left: 10%;
@@ -49,6 +49,11 @@ body {
     border: 2px solid rgb(243, 241, 241);
     border-radius: 2vh;
     background-color:  #0a0a0a ;
+}
+
+.p_smallBox {
+    color: white;
+    padding-left: 10px;
 }
 
 h1 {
