added a class using JS that represents a course

--- a/style.css
+++ b/style.css
@@ -98,8 +98,8 @@ h1 {
 }
 
 .btn:hover {
-    background-color: #fff;
-    color: #0a0a0a;
+    background-color:  #72a1e4  ;
+    color: #fff;
 }
 
 a {
